# RoPE-T5

./: .gitignore  README.md  pyproject.toml
scripts/: run_evaluation.py  run_pretraining.py
src/t5_rope_model/: __init__.py  configuration_t5.py  data_processing.py  modeling_t5.py
