[project]
name = "packetllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==0.28.0",
    "datasets>=3.6.0",
    "evaluate>=0.4.4",
    "flash-attn>=2.8.0.post2",
    "hf-xet>=1.1.4",
    "sentencepiece>=0.2.0",
    "torch>=2.7.1",
    "transformers==4.39.0",
    "wandb>=0.20.1",
]
